--- a/application/index/view/index/shop-cart.html
+++ b/application/index/view/index/shop-cart.html
@@ -5,8 +5,8 @@
     <div class="gt_sub_banner_bg default_width">
         <div class="container">
             <div class="gt_sub_banner_hdg  default_width">
-                <h2>Shop Detail</h2>
-                <h6>Welcome To Educskill</h6>
+                <h2>我的购物车</h2>
+                <h6>欢迎来到还没名字的网站~</h6>
             </div>
         </div>
     </div>
@@ -42,37 +42,49 @@
                         <td style="text-align: center;line-height: 62px;">1</td>
                         {volist name="photo" id="p"}
                         <td style="text-align: center;line-height: 62px;">
-                            <img src="/uploads/goodsPhoto/{$p['p0']}" class="img-rounded" alt="" width="100" height="56">
+                            <img src="/uploads/{$p['p0']}" class="img-rounded" alt="" width="100" height="56">
                         </td>
                         {/volist}
                         {volist name="res" id="r"}
                         <td style="text-align: center;line-height: 62px;">{$r['gd_title']}</td>
-                        <td style="text-align: center;line-height: 62px;">goodsType</td>
+                        <td style="text-align: center;line-height: 62px;">{$cate}</td>
                         {/volist}
                         {volist name="data" id="d"}
                         <td style="text-align: center;line-height: 62px;" id="price">{$d['ca_price']}</td>
+                        <form action="index/order/index" method="post">
+                            <!--传递用户id-->
+                            <input type="hidden" name="uid" value="{$data[0]['ca_uid']}">
+                            <!--商品id-->
+                            <input type="hidden" name="gid" value="{$data[0]['ca_gdid']}">
+                            <!--商品单价-->
+                            <input type="hidden" name="price" value="{$data[0]['ca_price']}">
+                            <p style="display: none" id="base">{$point}</p>
+                            <!--总积分-->
+                            <input type="hidden" name="point" id="point">
                         <td style="text-align: center;">
                             <div class="gt_product_left_wrap" style="border-bottom: none;margin-left: 0px;margin: 8px 0px -12px">
-                                <div id="incdec"style="margin-left: 54px;">
-                                    <input type="text" value="{$d['ca_num']}" readonly="readonly" id="num"/>
+                                <div id="incdec" style="margin-left: 54px;">
+                                    <!--传递数量-->
+                                    <input type="text" value="{$d['ca_num']}" readonly="readonly" id="num" name="num"/>
                                     <div class="gt_increment">
-                                        <button id="up" >+</button>
-                                        <button id="down" > -</button>
+                                        <button type="button" id="up" >+</button>
+                                        <button type="button" id="down" > -</button>
                                     </div>
                                 </div>
                             </div>
                         </td>
-
+                            <input type="hidden" name="total" id="passtotal">
                         <td style="text-align: center;line-height: 62px;" id="total"></td>
                         <td style="text-align: center;line-height: 62px;">
-                            <button class="btn btn-danger glyphicon glyphicon-trash" data-id="{$cid}" id="del"></button>
+                            <button type="button" class="btn btn-danger glyphicon glyphicon-trash" data-id="{$cid}" id="del"></button>
                         </td>
                     </tr>
                     {/volist}
                 </table>
-                <div style="margin-left: 850px;">
-                    <button class="btn btn-info btn-lg ml30">再去逛逛</button>
-                    <button class="btn btn-success btn-lg ml30">去结算</button>
+                <div style="margin-left: 850px">
+                        <a class="btn btn-info btn-lg ml30">再去逛逛</a>
+                        <button type="submit" class="btn btn-success btn-lg ml30" id="settle">去结算</button>
+                    </form>
                 </div>
             </div>
             <!--Content Wrap Start-->
@@ -86,43 +98,59 @@
 {js href="/static/app/index/js/toastr.min.js"}
 <script>
 
-
-
     //    计算总价
-    $(function(){
+        $(function(){
 //        console.log($('#price').html());
 //        console.log($('#num').val());
         var num = $('#price').html()*$('#num').val();
         num = num.toFixed(2)
         $('#total').html(num);
+        $('#passtotal').val(num);
+//        计算积分
+        var p1 = $('#base').html()*$('#num').val();
+        $('#point').val(p1);
 //        console.log($('#total').html(num));
 
         //    点击改变数量
         $('#up').click(function(){
             if($('#num').val() >= 99){
                 $('#num').val(99);
+            }else{
+                $('#num').val() + 1;
             }
-            $('#num').val() + 1;
-            var n = parseInt($('#num').val()) + 1;
+            var n = parseInt($('#num').val());
 //        console.log(n);
             var t = $('#price').html()*n;
 //        console.log(t);
             t = t.toFixed(2);
             $('#total').html(t);
-//        console.log($('#total').html(t));
-
+            $('#passtotal').val(t);
+//            console.log($('#passtotal').val());
+            var p = $('#base').html();
+            var point = p*n;
+            $('#point').val(point);
+//            console.log(point);
         });
 
 
         $('#down').click(function(){
             if($('#num').val() <= 1){
                 $('#num').val(1);
+            }else{
+                $('#num').val() - 1;
             }
-            $('#num').val() - 1;
-            var n = parseInt($('#num').val()) - 1;
+            var n = parseInt($('#num').val());
+//            console.log(n);
             var t = $('#price').html()*n;
             t = t.toFixed(2);
             $('#total').html(t);
+            $('#passtotal').val(t);
+//            console.log($('#passtotal').val());
+            var p = $('#base').html();
+            var point = p*n;
+            $('#point').val(point);
+//            console.log(point);
+
         });
 
 //    执行删除
@@ -168,6 +196,12 @@
                 }
             });
         }
+
+//        执行付款
+           $('#settle').click(function(){
+              alert('支付成功');
+              location.href('index/index/index');
+           });
     });
 </script>
 {/block}
