--- a/application/admin/view/activities/ActivitiesAdminCateEdit.html
+++ b/application/admin/view/activities/ActivitiesAdminCateEdit.html
@@ -39,13 +39,13 @@
                     </div>
                     <div class="space15"></div>
 
-                    <form action="{:url('admin/HotelCate/update',['id'=>$data.id])}" method="post" enctype="multipart/form-data">
+                    <form action="{:url('admin/ActivitiesAdminCate/update',['id'=>$data.id])}" method="post" enctype="multipart/form-data">
                         <input type="hidden" name="_method" value="PUT">
                         <input type="hidden" name="id" value="{$data.id}">
                         <div class="form-group">
                             <label for="exampleInputEmail1">分类名称</label>
-                            <input type="text" name="h_name" class="form-control" id="exampleInputEmail1" value="{$data.h_name}">
-                            <input type="hidden" name="c_id"  value="{$data.c_id}">
+                            <input type="text" name="ac_name" class="form-control" id="exampleInputEmail1" value="{$data.ac_name}">
+                            <input type="hidden" name="p_id"  value="{$data.p_id}">
                            
                         </div>
                         <button type="submit" class="btn btn-default">提交</button>
