--- a/application/admin/view/index/busIndex.html
+++ b/application/admin/view/index/busIndex.html
@@ -29,9 +29,9 @@
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
-    <!--<script src="/static/app/admin/js/html5shiv.js"></script>-->
+    <!-<script src="/static/app/admin/js/html5shiv.js"></script>-->
     <!--<script src="/static/app/admin/js/respond.min.js"></script>-->
-    <![endif]-->
+    <!--[endif]-->
 </head>
 <body class="sticky-header">
 
@@ -114,8 +114,7 @@
                 <!--yjf-->
                  <li class="menu-list"><a href=""><i class="fa fa-book"></i> <span>活动管理</span></a>
                     <ul class="sub-menu-list">
-                        <li><a href="../user/general.html"> 发布活动</a></li>
-                        <li><a href="buttons.html"> 修改活动</a></li>
+                        <li><a href="{:url('admin/Activities/index')}"> 活动列表</a></li>
                     </ul>
                 </li>
                 <!--yjf-->
