--- a/application/admin/view/index/index.html
+++ b/application/admin/view/index/index.html
@@ -135,6 +135,15 @@
                     </ul>
                 </li>
 
+                <li class="menu-list"><a href=""><i class="fa fa-book"></i> <span>活动管理</span></a>
+                    <ul class="sub-menu-list">
+                        <li><a href="{:url('admin/ActivitiesAdminCate/read',['id'=>'2'])}">活动分类管理</a></li>
+                    </ul>
+                    <ul class="sub-menu-list">
+                        <li><a href="{:url('admin/ActivitiesAdminList/index')}">活动列表</a></li>
+                    </ul>
+                </li>
+
                 <li class="menu-list"><a href=""><i class="fa fa-book"></i> <span>住宿管理</span></a>
                     <ul class="sub-menu-list">
                         <li><a href="{:url('admin/Hotelcate/read',['id'=>'4'])}">住宿分类管理</a></li>
@@ -171,6 +180,12 @@
                     </ul>
                     <ul class="sub-menu-list">
                         <li><a href="{:url('admin/Scenerylist/index')}">景区列表</a></li>
+                    </ul>
+                </li>
+
+                <li class="menu-list"><a href=""><i class="fa fa-book"></i> <span>友情链接管理</span></a>
+                    <ul class="sub-menu-list">
+                        <li><a href="{:url('admin/link/index')}">友情链接列表</a></li>
                     </ul>
                 </li>
 
